# MyNiftyStockPredictions

./: .gitignore  README.md  TODO.md  package-lock.json  package.json  publish-to-github.bat  publish-to-github.md  render.yaml  run-app.bat  run-portfolio-bot.bat  stock-v1-backlo.md  test-monitoring.bat
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/healthz/: route.ts
apps/web/app/api/monitoring/: route.ts
apps/web/app/api/portfolio-bot/: route.ts
apps/web/app/api/recommendation-price-overlay/: route.ts
apps/web/app/history/: page.tsx
apps/web/app/monitoring/: page.tsx
apps/web/app/portfolio/: page.tsx
apps/web/components/: app-shell.tsx  dashboard.tsx  history-dashboard.tsx  market-refresh-button.tsx  market-ui.tsx  monitoring-dashboard.tsx  portfolio-dashboard.tsx  stock-detail.tsx  stock-search-box.tsx  use-latest-price-overlay.ts  use-shared-wallet.ts  wallet-buy-modal.tsx  wallet-summary-pill.tsx
apps/web/lib/: analytics.ts  company-research.ts  market-universe.ts  monitoring.ts  portfolio-bot.ts  portfolio-wallet.ts  recommendation-data.ts  server-wallet.ts  types.ts  wallet-client.ts
data/: automation-runs.json  sample-recommendations.json
data/trading-reports/: 2026-04-27.json  2026-04-27.md  2026-04-28.json  2026-04-28.md
data/wallet/: paper-wallet.json
scripts/: portfolio-bot.mjs  refresh-market-data.mjs
services/api/: pyproject.toml
services/api/app/: __init__.py  analytics.py  main.py  schemas.py
services/api/tests/: test_analytics.py
(+4 files in other folders)
