[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recommendation-api"
version = "0.1.0"
description = "FastAPI service for explainable Indian equities recommendations."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.10,<3.0",
  "uvicorn[standard]>=0.32,<1.0"
]
